fixed score input dark mode issue

--- a/src/components/ScoreTable/ScoreTable.module.scss
+++ b/src/components/ScoreTable/ScoreTable.module.scss
@@ -1,4 +1,5 @@
 @import "../../variables.scss";
+@import "../../globals.scss";
 
 table.table {
   width: 100%;
@@ -65,6 +66,7 @@ div {
     width: 100%;
     @media (prefers-color-scheme: dark) {
       background-color: $--dark-bg-secondary;
+      color: $--dark-text;
     }
   }
 }
